<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestHomework11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="XMC-0J-3AN">
                                <rect key="frame" x="40" y="390" width="334" height="116"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uQd-zw-cat">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="login:" destination="BYZ-38-t0r" eventType="editingChanged" id="p7y-Ew-8WC"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0dg-S2-4KM">
                                        <rect key="frame" x="0.0" y="41" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="pass:" destination="BYZ-38-t0r" eventType="editingChanged" id="RCw-dk-oHM"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vww-Yv-XUV">
                                        <rect key="frame" x="0.0" y="82" width="334" height="34"/>
                                        <state key="normal" title="Enter"/>
                                        <connections>
                                            <action selector="enterPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2QL-oV-3QJ"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="XMC-0J-3AN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="BIS-T8-lrK"/>
                            <constraint firstItem="XMC-0J-3AN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CwT-UQ-wop"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XMC-0J-3AN" secondAttribute="trailing" constant="40" id="DoA-Zy-l0g"/>
                            <constraint firstItem="XMC-0J-3AN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="jrd-rx-boX"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="enterButton" destination="Vww-Yv-XUV" id="aYE-WA-Cvf"/>
                        <outlet property="loginTextField" destination="uQd-zw-cat" id="TSR-L9-hDQ"/>
                        <outlet property="passwordTextField" destination="0dg-S2-4KM" id="dRc-T5-7iu"/>
                        <segue destination="iWD-s8-J4A" kind="show" id="ex7-aE-AbO"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-178.2608695652174" y="120.53571428571428"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="h7T-K9-X4h">
            <objects>
                <viewController storyboardIdentifier="gongrats" id="iWD-s8-J4A" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Cld-Ms-V1o">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration complited successfully" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tkd-Bs-aX1">
                                <rect key="frame" x="19" y="323" width="376" height="196"/>
                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="AA6-l0-K34"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="tkd-Bs-aX1" firstAttribute="leading" secondItem="AA6-l0-K34" secondAttribute="leading" constant="19" id="VmS-V4-cJg"/>
                            <constraint firstItem="tkd-Bs-aX1" firstAttribute="top" secondItem="AA6-l0-K34" secondAttribute="top" constant="323" id="aaS-0v-eUq"/>
                            <constraint firstItem="tkd-Bs-aX1" firstAttribute="centerX" secondItem="Cld-Ms-V1o" secondAttribute="centerX" id="mMA-Dg-hLa"/>
                            <constraint firstItem="tkd-Bs-aX1" firstAttribute="centerY" secondItem="Cld-Ms-V1o" secondAttribute="centerY" id="vOM-Tg-VVS"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="OD6-2w-Zpz"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LNf-LQ-g1f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="634.78260869565224" y="120.53571428571428"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
